added displayFeatrues toggle, removed obsolte domainName, added documentation, updated parent

--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -1,5 +1,5 @@
 <div>
   <p>
-	Google Analytics plugin that decorates all pages with tracking code. 
+	Google Analytics plugin which adds tracking snippet to the head on all pages. 
   </p>
 </div>
