added target _blank for links

--- a/src/main/webapp/anonymizeip.html
+++ b/src/main/webapp/anonymizeip.html
@@ -1,6 +1,6 @@
 <div>
   <p>
     This feature is used for IP-Masking of the last three characters.<br>
-    It's e.g. required for German customers and additonal information can be viewed <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/field-reference#anonymizeIp">here</a>
+    It's e.g. required for German customers and additonal information can be viewed <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/field-reference#anonymizeIp" target="_blank">here</a>
   </p>
 </div>
