--- a/src/main/webapp/customfeatures.html
+++ b/src/main/webapp/customfeatures.html
@@ -1,6 +1,6 @@
 <div>
   <p>
-    In the textbox you can add any additional lines you want.
+    In the textbox you can add any additional lines you want.<br>
     Multiline is supported and added right under the other features.
   </p>
 </div>
