--- a/src/main/webapp/displayfeatures.html
+++ b/src/main/webapp/displayfeatures.html
@@ -1,6 +1,5 @@
 <div>
   <p>
-    Enables features for Display Advertising. More info can be found <br>
-    <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/display-features">here</a> 
+    Enables features for Display Advertising. More info can be found <a href="https://developers.google.com/analytics/devguides/collection/analyticsjs/display-features" target="_blank">here</a> 
   </p>
 </div>
