--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -1,5 +1,3 @@
 <div>
-  <p>
-    Google Analytics plugin which adds tracking snippet to the head on all pages. 
-  </p>
+  <p>Google Analytics plugin which adds tracking snippet to the head on all pages.</p>
 </div>
